menu fix on mobile

--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -40,6 +40,18 @@
         &.focus {
             box-shadow: none;
         }
+
+        @media (max-width: 991px) {
+            font-family: 'DIN Condensed';
+            font-style: normal;
+            font-weight: bold;
+            font-size: 27px;
+            line-height: 135%;
+            letter-spacing: 0.09em;
+            color: #000000;
+            text-transform: uppercase;
+            padding: .5rem 0;
+        }
     }
 
     .dropdown-item {
@@ -77,6 +89,7 @@
         flex-direction: column;
         align-items: initial;
         z-index: 999;
+        overflow: auto;
     }
 
     .top-navbar {
@@ -90,12 +103,12 @@
         font-family: 'DIN Condensed';
         font-style: normal;
         font-weight: bold;
-        font-size: 46px;
+        font-size: 35px;
         line-height: 135%;
         letter-spacing: 0.09em;
         color: #000000;
         text-transform: uppercase;
-        padding: 1rem 0;
+        padding: .5rem 0;
 
         &.active {
             color: #fff;
